<resources>
    <string name="app_name">Asl Bekhar (اصل بخر)</string>
    <string name="app_name_persian">اصل بخر</string>
    <string name="i_allow">اجازه میدم</string>
    <string name="tabExplore">لیست</string>
    <string name="tabMap">نزدیک من</string>
    <string name="tabSale">تخفیف ها</string>
    <string name="tabMyStore">فروشگاه من</string>
    <string name="no_item_to_show">هیج آیتمی برای نمایش وجود ندارد</string>
    <string name="call">تماس</string>
    <string name="show_on_map">نمایش روی نقشه</string>
    <string name="map">نقشه</string>
    <string name="you_are_offline">شما به اینترنت وصل نیستید</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="no_sales_around_you">حراجی در اطراف شما پیدا نشد.</string>
    <string name="gcm_SenderId">472796603076</string>
    <string name="search">جست و جو</string>
    <string name="you_need_yo_turn_on_gps">برای این که بتوانید فروشکاه های اطراف خود را ببینید باید GPS گوشی خود را روشن کنید</string>
    <string name="location_access_denied">شما اجازه دسترسی به GPS رو ندادید، برای این که بتوانید فروشکاه های اطراف خود را ببینید باید اجازه دسترسی بدهید، آیا می خواهید یک بار دیگر امتحان کنید و دسترسی دهید؟</string>
    <string name="gps_is_off">GPS خاموش است</string>
    <string name="ok_lets_turn_it_on">باشه، بریم روشن کنیم</string>
    <string name="no_idont_want">نه نمیخوام</string>
    <string name="gps_turned_on_succesfully">شما GPS رو با موفقیت روشن کردید</string>
    <string name="ok">باشه</string>
    <string name="gps_didnt_turn_on">متاسفانه GPS روشن نشد، آیا میخواهید دوباره تلاش کنید؟</string>
    <string name="ok_i_try_again">باشه، دوباره سعی میکنم</string>
    <string name="tips_to_verify_product">نکاتی برای تشخیص کالای اصل از غیر اصل</string>
    <string name="prompt_email">ایمیل (شناسه ورود)</string>
    <string name="prompt_password">رمز عبور</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="action_sign_in">ورود</string>
    <string name="action_sign_up">ثبت فروشگاه (رایگان)</string>
    <string name="forgot_your_password">آیا نام کاربری یا رمز عبور خود را فراموش کرده اید؟</string>
    <string name="yes_its_me">بله، درسته</string>
    <string name="no_its_not_me">نه این فروشگاه من نیست</string>
    <string name="invalid_password">رمز عبور اشتباه است</string>
    <string name="connection_error">خطا در اتصال</string>
    <string name="try_again">دوباره تلاش کن</string>
    <string name="change_password">رمز را عوض کن</string>
    <string name="old_password">رمز قبلی</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="confirmPassword">تکرار رمز عبور جدید</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="back">بازگشت</string>
    <string name="confirm_password_wrong">رمز جدید که دو بار وارد میکنید، باید با هم مطابقت داشته باشد</string>
    <string name="password_too_short">پسورد باید حداقل شش حرف باشد</string>
    <string name="update">بروزرسانی کن</string>
    <string name="do_it_later">فعلا نمیخواد</string>
    <string name="you_need_to_update">نسخه جدید برنامه منتشر شده، لطفا برای استفاده از تمام امکانات برنامه باید آن را به روزرسانی کنید.</string>
    <string name="go_on">ادامه</string>
    <string name="readMore">ادامه</string>
    <string name="permission_needed">لطفا برای این که بتوانیم فروشگاه های نزدیک شما را پیدا کنیم باید اجازه دسترسی بدهید.</string>
    <string name="permission_needed_2">لجهت دسترسی به تمامی امکانات اپلیکیشن (فروشگاهها و حراج های نزدیک من)، به اپ امکان دسترسی به جی پی اس را بدهید.</string>
    <string name="sale_start">شروع تخفیف:</string>
    <string name="sale_end">پایان تخفیف:</string>
    <string name="store_distance">فاصله فروشگاه تا شما:</string>
    <string name="gps_off_tap_here_to_turn_on">برای روشن کردن GPS اینجا را کلیک کنید</string>
    <string name="confirm_exit">برای خروج بازگشت را دوباره لمس کنید</string>
    <string name="next">بعدی</string>
    <string name="username">نام کاربری</string>
    <string name="choose_city">انتخاب شهر</string>
    <string name="choose_brand">انتخاب برند</string>
    <string name="incorrectEmail">لطفا ایمل را درست وارد کنید</string>
    <string name="store_name">نام فروشگاه</string>
    <string name="store_address">آدرس فروشگاه:</string>
    <string name="work_hour">ساعت کار (مثال 22-12)</string>
    <string name="distributor">پخش کننده (اختیاری)</string>
    <string name="store_details">اطلاعات فروشگاه</string>
    <string name="store_location">مکان یابی فروشکاه</string>
    <string name="store_name_validation">نام فروشگاه حداقل بایذ سه حرف باشد.</string>
    <string name="store_address_validation">آدرس فروشگاه باید حداقل 10 حرف باشد</string>
    <string name="store_work_hour_validation">ساعات کاری  را درست وارد کنید</string>
    <string name="store_tel">تلفن فروشگاه</string>
</resources>