<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/changPassLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/text"
            style="@style/AccountInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/brandLogo"
            android:gravity="right"
            android:padding="2dp"
            android:text="@string/you_need_to_update"
            android:textColor="@color/textColorPrimaryInverse"
            android:textSize="@dimen/item_title_ts_larger" />

        <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/update"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_ts_medium"
            app:backgroundTint="@color/buttonColorSecondary" />

        <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/skip"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/do_it_later"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_ts_medium"
            app:backgroundTint="@color/colorPrimary" />
    </RelativeLayout>


</RelativeLayout>