<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/changPassLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/oldPasswordInputLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newPasswordInputLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldPasswordInputLay"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordInputLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPasswordInputLay"
            android:textColorHint="@color/colorPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/changePassword"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordInputLay"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/logOut"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_ts_medium"
            app:backgroundTint="@color/buttonColorSecondary" />

        <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/logOut"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordInputLay"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_ts_medium"
            app:backgroundTint="@color/colorPrimary" />
    </RelativeLayout>


    <com.rey.material.widget.ProgressView
        android:id="@+id/signInBtnProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:translationZ="2dp"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/CircularProgressTheme" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:layout_alignBottom="@+id/changPassLay"
        android:background="@color/colorListOverLay"/>


</RelativeLayout>