<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_light_2">

    <RelativeLayout
        android:id="@+id/verificationTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/red_light"
        android:visibility="gone">

        <TextView
            android:id="@+id/verificationTipsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/tips_to_verify_product"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/verificationTipsTxt"
            android:layout_alignTop="@+id/verificationTipsTxt"
            android:layout_toRightOf="@+id/verificationTipsTxt"
            android:src="@drawable/icon_verification_tips" />

    </RelativeLayout>


    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/verificationTips"
        android:background="@color/white"
        android:hint="@string/search"
        android:paddingLeft="10dp"
        android:paddingRight="40dp" />

    <ImageView
        android:id="@+id/searchClear"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchEditText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/searchEditText"
        android:padding="6dp"
        android:src="@drawable/search"
        android:tag="0"
        android:visibility="visible" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bannerAdvertise"
        android:layout_below="@+id/searchEditText"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:visibility="visible" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/searchEditText"
        android:src="@drawable/shadow_from_top" />

    <ImageView
        android:id="@+id/listOverLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/offlineLay"
        android:layout_below="@+id/sliderLay"
        android:background="@color/colorListOverLay"
        android:visibility="gone" />

    <include
        android:id="@+id/nodata"
        layout="@layout/nodata" />

    <com.rey.material.widget.ProgressView
        android:id="@+id/progressBar"
        style="@style/CircularProgressTheme"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:cpd_strokeSize="1dp"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress" />

    <ImageView
        android:id="@+id/fullScreenAdvertise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bannerAdvertise"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/offlineLay"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/offlineColor"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:src="@drawable/offline_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/you_are_offline" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>